Pass around a shared service locator
this prevents multiple classloaders from being created from the same
jars.